--- a/ChinookSolution/ChinookWeb/Web.config
+++ b/ChinookSolution/ChinookWeb/Web.config
@@ -10,11 +10,8 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection"
-      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-ChinookWeb-95436f1b-71d0-4bce-9f65-d5c68563f4d9;AttachDbFilename=|DataDirectory|\aspnet-ChinookWeb-95436f1b-71d0-4bce-9f65-d5c68563f4d9.mdf;Integrated Security=SSPI"
-      providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+  <connectionStrings configSource="WebConnectionStrings.config"/>
+    
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5.2"/>
@@ -104,6 +101,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <!-- To prevent the dunamic  creation of a database -->
+    <contexts>
+      <context type="ChinookSystem.DAL.ChinookContext,ChinookSystem"
+               disableDatabaseInitialization="true"/>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
